fix footer issue in both light and dark mode

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -141,8 +141,11 @@ body {
   color: white;
 }
 
-[data-theme='dark'] .footer {
+.footer {
   z-index: 100;
+}
+
+[data-theme='dark'] .footer {
   background-color: var(--click-color-background);
 }
 
